--- a/public/main.css
+++ b/public/main.css
@@ -114,13 +114,29 @@ ul {
 .chatArea {
   height: 100%;
   padding-bottom: 60px;
+  display: flex;
 }
 
 .messages {
+  flex: 50%;
   height: 100%;
   margin: 0;
   overflow-y: scroll;
   padding: 10px 20px 10px 20px;
+}
+
+.wordList {
+  height: 20%;
+}
+
+.curWord {
+  height: 20%;
+}
+
+.final {
+  height: 20%;
+  font-size: 40pt;
+  text-align: center;
 }
 
 .message.typing .messageBody {
